<resources>
    <string name="app_name">PenguinPay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="recipient_s_details">Recipient\'s Details</string>
    <string name="last_name">Last Name</string>
    <string name="image_dsc">app image</string>
    <string name="phone_number">Phone Number</string>
    <string name="select_country">Select Country</string>
    <string name="empty_field_error_text">Field Cannot be empty</string>
    <string name="invalid_number_error">Invalid Phone Number</string>
    <string name="penguin_pay">Penguin Pay</string>
    <string name="channel_name">notify channel</string>
    <string name="channel_description">notify channel</string>
    <string name="enter_amount_in_binary">Enter amount (In Binary)</string>
    <string name="transfer_amount">Transfer Amount</string>
    <string name="send">SEND</string>
    <string name="valid_binary_error">Pleas provide a valid amount in binary</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="dismiss">DISMISS</string>
    <string name="exchange_error_message">Unable to retrieve Exchange Rates at this time. Please try again later.</string>
</resources>