<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.TransactionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:background="@color/background_grey"
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/headerLayout"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white">

                <TextView
                    android:id="@+id/titleTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="@dimen/sixteen_dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:textStyle="bold"
                    android:text="@string/penguin_pay"
                    android:layout_marginStart="@dimen/thirty_two_dp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_size_fourteen" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <ScrollView
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_margin="@dimen/twenty_four_dp"
                    app:cardCornerRadius="@dimen/four_dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:background="@android:color/white"
                        android:paddingBottom="@dimen/twenty_four_dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/recipient_s_details"
                            android:textSize="@dimen/font_size_thirteen"
                            android:layout_margin="@dimen/sixteen_dp"
                            android:textColor="@color/gun_metal"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/firstNameLayout"
                            android:hint="@string/first_name"
                            android:layout_marginEnd="@dimen/sixteen_dp"
                            android:layout_marginStart="@dimen/sixteen_dp"
                            android:layout_marginBottom="@dimen/sixteen_dp"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/firstNameTextField"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/fifty_dp"
                                android:layout_marginTop="@dimen/eight_dp"
                                android:imeOptions="actionNext"
                                android:nextFocusDown="@id/lastNameTextField"
                                android:inputType="text"
                                android:padding="@dimen/eight_dp"
                                android:textSize="@dimen/font_size_thirteen"
                                tools:ignore="Autofill" />

                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/lastNameLayout"
                            android:hint="@string/last_name"
                            android:layout_marginEnd="@dimen/sixteen_dp"
                            android:layout_marginStart="@dimen/sixteen_dp"
                            android:layout_marginBottom="@dimen/sixteen_dp"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/lastNameTextField"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/fifty_dp"
                                android:layout_marginTop="@dimen/eight_dp"
                                android:imeOptions="actionNext"
                                android:nextFocusDown="@id/phoneLayout"
                                android:inputType="text"
                                android:padding="@dimen/eight_dp"
                                android:textSize="@dimen/font_size_thirteen"
                                tools:ignore="Autofill" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RelativeLayout
                                android:layout_marginStart="@dimen/sixteen_dp"
                                android:layout_marginTop="@dimen/four_dp"
                                android:layout_gravity="center_vertical"
                                android:background="@drawable/ash_border"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <LinearLayout
                                    android:orientation="horizontal"
                                    android:id="@+id/countryLayout"
                                    android:layout_margin="@dimen/eight_dp"
                                    android:background="?android:attr/selectableItemBackground"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" >


                                    <de.hdodenhof.circleimageview.CircleImageView
                                        android:id="@+id/flagImageView"
                                        android:scaleType="centerCrop"
                                        android:src="@drawable/flag_nigeria"
                                        android:layout_gravity="center_vertical"
                                        android:layout_width="@dimen/twenty_dp"
                                        android:layout_height="@dimen/twenty_dp"/>

                                    <TextView
                                        android:id="@+id/countryNameTextView"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center_vertical"
                                        android:layout_marginStart="@dimen/eight_dp"
                                        android:textStyle="bold"
                                        android:text="+234"
                                        android:textColor="@color/gun_metal"
                                        android:textSize="@dimen/font_size_fourteen" />

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:contentDescription="@string/image_dsc"
                                        android:src="@drawable/chevron_down_black" />

                                </LinearLayout>

                            </RelativeLayout>


                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/phoneLayout"
                                android:layout_weight="1"
                                android:layout_marginTop="@dimen/eight_dp"
                                android:layout_marginEnd="@dimen/sixteen_dp"
                                android:layout_marginStart="@dimen/sixteen_dp"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="0dp"
                                android:hint="@string/phone_number"
                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/phoneTextField"
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/fifty_dp"
                                    android:layout_marginTop="@dimen/eight_dp"
                                    android:imeOptions="actionDone"
                                    android:inputType="number"
                                    android:padding="@dimen/eight_dp"
                                    android:textSize="@dimen/font_size_fourteen"
                                    tools:ignore="Autofill,TextFields" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="@dimen/four_dp"
                    android:layout_margin="@dimen/twenty_four_dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">



                        <TextView
                            android:text="@string/transfer_amount"
                            android:textSize="@dimen/font_size_thirteen"
                            android:layout_margin="@dimen/sixteen_dp"
                            android:textColor="@color/gun_metal"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/amountLayout"
                            android:hint="@string/enter_amount_in_binary"
                            android:layout_marginEnd="@dimen/sixteen_dp"
                            android:layout_marginStart="@dimen/sixteen_dp"
                            android:layout_marginBottom="@dimen/twenty_four_dp"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/amountTextField"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/fifty_dp"
                                android:layout_marginTop="@dimen/eight_dp"
                                android:imeOptions="actionNext"
                                android:nextFocusDown="@id/lastNameTextField"
                                android:inputType="number"
                                android:padding="@dimen/eight_dp"
                                android:textSize="@dimen/font_size_thirteen"
                                tools:ignore="Autofill" />

                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <Button
                    android:id="@+id/sendButton"
                    android:layout_marginStart="@dimen/forty_dp"
                    android:layout_marginEnd="@dimen/forty_dp"
                    android:layout_marginBottom="@dimen/seventy_dp"
                    android:layout_marginTop="@dimen/thirty_two_dp"
                    android:text="@string/send"
                    style="@style/button_theme"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fifty_dp" />

            </LinearLayout>

        </ScrollView>


        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/appLoader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/loader_background_color">

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/loader"
                style="@style/SpinKitView.FadingCircle"
                android:layout_width="@dimen/hundred_dp"
                android:layout_height="@dimen/hundred_dp"
                android:layout_centerInParent="true"
                app:SpinKit_Color="@android:color/white" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>